--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Rousseau, Jean-Jacques, 1712-1778'
+- GITenberg
 title: Jean-Jacques Rousseau
 url: http://www.gutenberg.org/ebooks/18996
